[package]
name = "buffer-language-server"
version = "0.1.0"
edition = "2021"
description = "LSP that can autocomplete words found in the opened buffer"
license-file = "LICENSE"
repository = "https://github.com/metafates/buffer-language-server"
authors = ["metafates"]
categories = ["development-tools", "command-line-utilities"]
keywords = ["lsp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
tower-lsp = "0.19.0"
# unicode-segmentation = "1.10.1"
